# cpp-optimization

./: .bazelrc  .gitignore  README.md  WORKSPACE
common/: BUILD.bazel  random.h
ext_optim/opt_001/: README.md  code.cpp
ext_optim/opt_002/: README.md  code.cpp
ext_optim/opt_003/: BUILD.bazel  README.md  code.cpp
ext_optim/opt_004/: README.md  code.cpp
ext_optim/opt_005/: BUILD.bazel  README.md  code.cpp
ext_optim/opt_006/: BUILD.bazel  README.md  code.cpp
ext_optim/opt_007/: README.md  code.cpp
std_optim/opt_001/: README.md  code.cpp
std_optim/opt_002/: BUILD.bazel  README.md  code.cpp
std_optim/opt_003/: README.md
std_optim/opt_004/: README.md  code.cpp
std_optim/opt_005/: README.md  code.cpp
std_optim/opt_006/: README.md  code.cpp
std_optim/opt_007/: README.md  code.cpp
std_optim/opt_008/: BUILD.bazel  README.md  code.cpp
std_optim/opt_009/: BUILD.bazel  README.md  multi_thread_code.cpp  single_thread_code.cpp
std_optim/opt_010/: BUILD.bazel  README.md  code.cpp
std_optim/opt_1/: README.md
std_optim/opt_2/: README.md
std_optim/opt_3/: README.md  code.cpp
